# Personal-Diary

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
diary/: admin.py  forms.py  models.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_entry_title_alter_entry_created_at_and_more.py  0003_remove_entry_tags_delete_tag.py  0004_alter_entry_title.py  0005_remove_entry_updated_at_entry_owner.py
diary/templates/: base.html  contacts.html  features.html  home.html
diary/templates/diary/: base.html  entry_confirm_delete.html  entry_detail.html  entry_form.html  entry_list.html
static/css/: diary_styles.css  styles.css
static/js/: diary_scripts.js
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_avatar.py  0003_user_token.py  0004_remove_user_username.py  0005_remove_user_token.py  0006_remove_user_avatar.py
users/templates/: login.html
users/templates/users/: user_form.html
