[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["polinakigim <polinakigim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.2"
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.10"
pillow = "^11.2.1"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
